# libscadable

./: .clang-format  .gitignore  CHANGELOG.md  CMakeLists.txt  MIGRATION.md  README.md  idf_component.yml
.github/workflows/: build-captive-provisioning.yml  build-hello-world.yml  ci.yml
examples/esp-idf-captive-provisioning/: CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults
examples/esp-idf-captive-provisioning/main/: CMakeLists.txt  ap_mode.c  ap_mode.h  captive_portal.html  main.c  sta_mode.c  sta_mode.h
examples/esp-idf-full-demo/: CMakeLists.txt  README.md
examples/esp-idf-full-demo/main/: CMakeLists.txt  main.c
examples/esp-idf-hello-world/: CMakeLists.txt  README.md
examples/esp-idf-hello-world/main/: main.c
include/: scadable.h  scadable_generated.h
src/: diagnostics.c  env.c  internal.h  lifecycle.c  logging.c  ota.c  publish.c  telemetry.c
tests/host/: CMakeLists.txt  test_libscadable.c
